test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/implicit_runas_group.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
assertion_line: 169
expression: stdout
---
User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Commands:
	/usr/bin/true

Sudoers entry:
    RunAsUsers: ferris
    Commands:
	/usr/bin/false
