test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/multiple_runas_groups.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
expression: stdout
---
User ferruccio may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Options: !authenticate
    Commands:
	/tmp

Sudoers entry:
    RunAsUsers: root
    Commands:
	/usr/bin/true

Sudoers entry:
    RunAsUsers: ferris
    Commands:
	/usr/bin/false
