test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/no_runas.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
expression: stdout
---
User ferruccio may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Options: !authenticate
    Commands:
	/tmp

Sudoers entry:
    RunAsUsers: root
    Commands:
	ALL
